# flutter-openssl-sample

./: pubspec.yaml
android/app/: build.gradle
ios/Runner.xcodeproj/: project.pbxproj
kernel/ffi_kernel/: README.md  ffigen.yaml  pubspec.yaml
kernel/ffi_kernel/android/: build.gradle  settings.gradle
kernel/ffi_kernel/android/src/main/: AndroidManifest.xml
kernel/ffi_kernel/ios/: ffi_kernel.podspec
kernel/ffi_kernel/ios/Classes/: ffi_kernel.cpp
kernel/ffi_kernel/lib/: ffi_kernel.dart  ffi_kernel_bindings_generated.dart
kernel/ffi_kernel/src/: CMakeLists.txt  ffi_kernel.cpp  ffi_kernel.h  sha256.h  sha256_apple.hpp  sha256_openssl.hpp
lib/: main.dart
macos/Runner.xcodeproj/: project.pbxproj
